# grok

./: Makefile.am  conf.y  configure.ac  grok_config.h  grokre.c  libgrok.pc.in
debian/: changelog  control  libgrok-dev.install  libgrok.install  rules
